added styling, social media, & a contact option to the profile overlay

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
   <title>MJ | Real Estate</title>
+
+
 </head>
 
 <body>
@@ -45,25 +47,34 @@
 
 
         <div class="profileContent">
+
           <div class="profileImage">
           </div>
+
+          <!-- Social Media -->
+          <div class="socialMedia">
+            <img src=images/facebook.svg alt="facebook">
+            <img src=images/youtube.svg alt="youtube">
+            <img src=images/twitter.svg alt="twitter">
+         </div>
+          <!-- Social Media -->
 
           <div class="profileText">
             <!-- profile -->
 
-
             <!-- Contact Section -->
-            <!-- <div class="contact">
+            <div class="contactArea">
      <div class="contact-text">
        <div class="contact-items">
-         <h2>Contact Us</h2>
+         <h2>Contact</h2>
          <input type="Text" placeholder="Your Name...">
          <input type="Text" placeholder="Your Email...">
-         <textarea cols="20" rows="20" placeholder="Your Message Here..."></textarea>
+         <input type="Message" placeholder="Your Message Here...">
+         <br>
          <a href="#">Submit</a>
        </div>
      </div>
-   </div> -->
+   </div>
             <!-- Contact Section -->
 
           </div>
