added design elements and adjusted structure for homepage middle content

--- a/index.html
+++ b/index.html
@@ -6,27 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
-  <title>MJ | Real Estate</title>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+  <title> | Real Estate</title>
 
 
 </head>
 
 <body>
-  <main>
-
     <!-- nav section -->
     <div class="topNav">
       <nav>
         <ul>
-          <li><a class="logo">LOGO</a></li>
+          <li><div class="logo"><a href="index.html"><img src="images/mj_realestate_logo1.svg" alt="logo" ></a></div></li>
+          <div class="nav-bar">
           <li><a class="home">Home</a></li>
           <li><a class="about">About</a></li>
           <li><a class="listings">Listings</a></li>
           <li><a class="contact">Contact</a></li>
+        </div>
         </ul>
       </nav>
     </div>
     <!-- nav section -->
+    <main>
 
 
     <!-- top section content -->
@@ -37,6 +39,8 @@
         <img src="images/realEstate_hookImage.jpg" alt="homeImage">
       </div>
       <!-- hook image -->
+      <!--hook image background -->
+
 
       <!-- profile card -->
       <div class="profileContainer">
@@ -49,6 +53,7 @@
         <div class="profileContent">
 
           <div class="profileImage">
+            <img src="images/placeholderProfile.jpg" alt="profile image" >
           </div>
 
           <!-- Social Media -->
@@ -86,10 +91,15 @@
     </section>
     <!-- top section content -->
 
+
+ <!-- middle section -->
+ <section id="middleContent">
     <!--second part-->
     <div class="part2">
     </div>
     <!--second part-->
+</section>
+<!-- middle section -->
 
 
   </main>
