practicing javascript by changing the hook title

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <title> | Real Estate</title>
 
 
@@ -38,6 +39,8 @@
       <div class="hookImage">
         <img src="images/realEstate_hookImage.jpg" alt="homeImage">
       </div>
+
+      <div id="hookTitle">hello world</div>
       <!-- hook image -->
       <!--hook image background -->
 
