added listings section and property search window

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+  <div id="textboxBack"><div class="close">X</div></div>
+  
     <!-- nav section -->
     <div class="topNav">
       <nav>
@@ -80,6 +83,11 @@
          <input type="Message" placeholder="Your Message Here...">
          <br>
          <a href="#">Submit</a>
+
+         <div class="searchWindowBtn">Property Search</div>
+
+
+
        </div>
      </div>
    </div>
@@ -98,7 +106,12 @@
  <!-- middle section -->
  <section id="middleContent">
     <!--second part-->
+    <div class="listTitle"> Latest Lisitings </div>
     <div class="part2">
+      <div class="listing"><div class="listInfo">15 North Ridgewood Ave,<br> London,<br> $350,000</div></div>
+      <div class="listing"><div class="listInfo">39 Fieldview Cres,<br> St. Thomas,<br> $200,000</div></div>
+      <div class="listing"><div class="listInfo">192 Stapleton Street,<br> London,<br> $459,000</div></div>
+      <div class="listing"><div class="listInfo">68 Black River Ave,<br> London,<br> $249,000</div></div>
     </div>
     <!--second part-->
 </section>
